dark-theme: fix single code block vert scrollbar

--- a/public/less/dark-theme.less
+++ b/public/less/dark-theme.less
@@ -148,9 +148,8 @@ a {
 
 // Single line code blocks don't have a `pre` element
 .chat-item code {
-  border: none;
+  border-color: @app-single-line-code-color;
   background-color: @app-single-line-code-color;
-  padding: .2rem .5rem;
 }
 
 // LEFT MENU
